...
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <include layout="@layout/search_toolbar_layout" />

    <TextView
        android:id="@+id/pEpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="8dp"
        android:text="@string/key_list_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="invisible" />
</LinearLayout>

