...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/message_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/message_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            tools:listitem="@layout/generic_message_list_item"
            android:divider="?attr/messageListSeparatorColor"/>

...
