...
                <include
                    android:id="@+id/fingerprintView"
                    layout="@layout/pep_fingerprints_view" />
            </ViewSwitcher>

            <Button
                android:id="@+id/confirmTrustWords"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="@dimen/button_minWidth"
                android:padding="10dip"
                android:stateListAnimator="@null"
...
