<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:title="@string/delete_action"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_white_24dp"
    />
    <item
        android:id="@+id/mark_as_read"
        android:title="@string/mark_as_read_action"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_mark_read"
    />
    <item
        android:id="@+id/mark_as_unread"
        android:title="@string/mark_as_unread_action"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_mark_unread"
    />
    <item
        android:id="@+id/archive"
        android:title="@string/archive_action"
        app:showAsAction="always"
        android:icon="@drawable/ic_archive_email"
    />
    <item
        android:id="@+id/move"
        android:title="@string/move_action"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_folder_toolbar"
    />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"
        android:icon="?attr/iconActionCopy"
    />
    <item
        android:id="@+id/flag"
        android:title="@string/flag_action"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_flag_action_mode"
    />
    <item
        android:id="@+id/unflag"
        android:title="@string/unflag_action"
        app:showAsAction="ifRoom"
        android:icon="?attr/iconActionUnflag"
    />
    <item
        android:id="@+id/spam"
        android:title="@string/spam_action"
        app:showAsAction="ifRoom"
        android:icon="?attr/iconActionSpam"
    />
    <item
        android:id="@+id/select_all"
        android:icon="?attr/iconActionSelectAll"
        app:showAsAction="never"
        android:title="@string/batch_select_all"
    />
</menu>
