...
        <include
            android:id="@+id/message_read_container"
            layout="@layout/message_list_item"
            tools:visibility="visible" />

        <include
            android:id="@+id/message_unread_container"
            layout="@layout/unread_message_list_item"
            tools:visibility="gone" />

        <!--What you want to show in SurfaceView-->
    </RelativeLayout>
    <!-- Surface View End -->
...
