...
        android:id="@+id/fabReply"
        style="@style/PlanckFabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/openCloseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_reply_light_opaque"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/openCloseButton"
...
